# 3d-beats

./: .gitignore  cu_utils.hpp  decision_tree.py  decision_tree_common.hpp  hand_config.json  intrinsics_notes  make_windows_installer.iss  py_nvcc_utils.py  readme.md  requirements.txt  run.py  run_live.py  test_on_saved_model.py  train_model.py  tree_eval.cu  tree_train.cu
datagen/: Rigged Hand.blend  make_proj_image.py  make_random_scene.py  realsense_projector_simulation.blend  stereo_alg.py
datagen/FemaleHand.blend/: FemaleHand.blend
installer/: 3d_bz.spec  build_all.ps1
src/: 3d_bz.py  buffer.py  calibrated_plane.py  compressed_blocks.py  decision_tree.py  gl_integration_test.py  hand_state.py  live_data_convert.py  make_fatbins.py  merge_datasets.py  pointcloids.py  pose_fit.py  py_nvcc_utils.py  rs_util.py  run_live.py  run_live_layered.py  run_live_multi.py  test_on_saved_model.py  train_model.py  util.py  window.py
src/camera/: arcball.py  std_camera.frag  std_camera.py  std_camera.vert
src/cpp_grouping/: CMakeLists.txt  cpp_grouping.pxd  cpp_grouping.pyx  grouping.cpp  grouping.h  grouping_test.cpp  grouping_test.py  readme.md  run_all.ps1  setup.py
src/cuda/: calibrated_plane.cu  cu_utils.hpp  decision_tree_common.hpp  default_gencodes.py  fit_mesh.cu  fit_mesh.py  mean_shift.cu  mean_shift.py  points_ops.cu  points_ops.py  py_nvcc_utils.py  tree_eval.cu  tree_train.cu
src/engine/: buffer.py  framebuffer.py  gl_program.py  glm_np.py  mesh.py  mesh_primitives.py  midi.py  profile_timer.py  texture.py  window.py
